# srt-subtitle-processor

./: .gitignore  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: quality-check.yml
doc/: CHS-EN-KOR-JPN Subtitle Guidelines.md  README-v2.2.md  SDH-removal.md  SRT_handler-PRD-v2.md  SRT_handler-PRD.md  TODO-initial.md  TODO-violation.md  Violation_Analysis_and_Validation_v2.5.md  srt_batch_processor v2.0 PRD.md
samples/: 02.en-chs.srt  05.en-zh.srt  05.en.srt  05_cleaned.srt  1753244028140.EN.srt  1753244028140_zh-EN.srt  Bouquet.CHS.srt  Bouquet.ENG.srt  CHS-KOR.srt  Mr.Burton.2025.720p.BluRay.EN.srt  Mr.Burton.2025.720p.BluRay.EN.zh.srt  Phanteam.chs-kor.srt  Untamed.S01E04.en-STRIPPED_SDH.srt  Untamed.S01E04.zh-Hans.srt  expected.txt  issue.txt  issue_processed.txt  source.txt
src/: __init__.py  main.py
src/srt_processor/: __init__.py  cli.py
src/srt_processor/core/: language_detector.py  parser.py  processor.py
src/srt_processor/models/: __init__.py  subtitle.py
src/srt_processor/processors/: __init__.py  chinese.py  english.py  korean.py
tests/: __init__.py
